# QuickSearch

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build.yml  cmake-multi-platform.yml
